--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,16 +1,31 @@
 html {
-  max-width: 1200px;
-  background: rgb(22, 54, 107);
+  max-width: 1280px;
+  background: rgb(0, 0, 0);
   color: white;
   margin: 0 auto;
 }
 
 
-nav {
-  background: black;
-  color: white;
-  border: none;
+.navbar-inverse {
+  background: white;
+  color: orange;
+  max-width: 1280px;
+  margin: 0 auto;
+  height: 40px;
 }
+.jumbotron {
+  background: url('/images/header.jpg') no-repeat center center;
+  height: 100vh;
+}
+
+
+.panel-default {
+  overflow-y: scroll;
+  height: 400px;
+}
+
+
+
 
 /*  Carousel */
 .carousel-inner img {
@@ -19,6 +34,9 @@ nav {
 .carousel-caption {
   background: rgba(0, 0, 0, 0.5);
 }
+
+
+
 
 
 footer {
@@ -31,4 +49,11 @@ footer {
 }
 .social-media {
   padding: 2em 2em;
+}
+
+
+@media (min-width: 1200px)
+bootstrap.min.css:6
+.container {
+    max-width: 1140px;
 }
