--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,14 +5,28 @@ html {
   margin: 0 auto;
 }
 
-
 .navbar-inverse {
-  background: white;
-  color: orange;
-  max-width: 1280px;
-  margin: 0 auto;
-  height: 40px;
+  background: transparent;
+  border: none;
 }
+
+.navbar-inverse .navbar-brand {
+  color: black;
+}
+.navbar-inverse .navbar-brand:hover {
+  color: orange;
+}
+.navbar-inverse .navbar-nav>li>a {
+  color: black;
+}
+.navbar-inverse .navbar-nav>li>a:hover {
+  color: orange;
+}
+.navbar-inverse .navbar-toggle {
+  background: black;
+  color: white;
+}
+
 .jumbotron {
   background: url('/images/header.jpg') no-repeat center center;
   height: 500px;
@@ -57,6 +71,9 @@ footer {
 }
 .social-media {
   padding: 2em 2em;
+}
+.social-media a {
+  text-decoration: none;
 }
 
 
