got to query by tag

--- a/django/warmup_ave/webmanager/templates/web/blog.html
+++ b/django/warmup_ave/webmanager/templates/web/blog.html
@@ -26,17 +26,16 @@
               {% endif %}
             </div>
             <div class="caption">
-              <a href="{% url 'webmanager:detail' blog.title %}"><h2>{{blog.title}}</h2></a>
-              <h4>Author: {{blog.author}}</h4>
+              <a href="{% url 'webmanager:detail' blog.slug %}"><h2>{{blog.title|title}}</h2></a>
+              <h4>Author: {{blog.author|title}}</h4>
               {% if blog.tags %}
-                Category:
-                <ul style="list-style:none; display:flex; justify-content:space-around; width:75%; margin: 0 auto;">
+                <ul style="list-style:none; display:flex; justify-content:space-around; width:25%;">
                   {% for tag in blog.tags %}
-                    <li>{{tag}}</li>
+                    <a href="{% url 'webmanager:search' tag %}"><li>{{tag|lower}}</li></a>
                   {% endfor %}
                 </ul>
               {% endif %}
-              <p>Posted at {{blog.created_at}}</p>
+              <p>Posted on {{blog.created_at}}</p>
             </div>
           </div>
         {% endfor %}
@@ -54,4 +53,6 @@
 
     </div>
   </div>
+
+
 {% endblock %}
