--- a/django/warmup_ave/webmanager/templates/web/detail.html
+++ b/django/warmup_ave/webmanager/templates/web/detail.html
@@ -2,5 +2,51 @@
 {% load static %}
 
 {% block body %}
-  <h1>{{ article.title }}</h1>
+<!-- Article Content -->
+  <div class="container">
+    <div class="wrapper">
+      {% if article.image %}
+        <img src="{{article.image.url}}" alt="" class="img-responsive">
+      {% else %}
+        <img src="{% static 'web/img/header.jpg' %}" class="img-responsive" alt="">
+      {% endif %}
+      <h1 class="post-title">{{article.title|title}}</h1><br>
+      <span>By {{article.author|title}}</span><br>
+      <ul style="list-style:none; display:flex; justify-content:space-around; width:25%;">
+        {% for tag in article.tags %}
+          <a href="{% url 'webmanager:search' tag %}"><li>{{tag|lower}}</li></a>
+        {% endfor %}
+      </ul>
+      <span>Posted on {{article.dateSent}}</span><br>
+      <p class="post-content">{{article.content}}</p>
+      <!-- sharing options -->
+      <div class="share">
+        <span class='st_facebook_large' displayText='Facebook'></span>
+        <span class='st_twitter_large' displayText='Tweet'></span>
+      </div>
+    </div>
+
+    <div id="disqus_thread"></div>
+  </div>
+
+  <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://localhost-8000-18.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 {% endblock %}
