--- a/django/warmup_ave/webmanager/templates/web/base.html
+++ b/django/warmup_ave/webmanager/templates/web/base.html
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">The Warm Up</a>
+          <a class="navbar-brand" href="{% url 'webmanager:index' %}">The Warm Up</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,7 +61,7 @@
         <div class="col-md-3">
           <a href="/admin">Admin Panel</a>
         </div>
-        Copyright &copy; <span id="cr"></span> theavenue.com
+        Copyright &copy; <span id="cr"></span> warmupave.com
       </div>
     <script type="text/javascript">
       var d = new Date();
