--- a/django/warmup_ave/webmanager/static/web/style.css
+++ b/django/warmup_ave/webmanager/static/web/style.css
@@ -244,7 +244,7 @@ tr {
 
 @media screen and (max-width: 767px) {
   .jumbotron {
-    background-image: url('../images/logoWOrange.jpg');
+    background-image: url('img/logoWOrange.jpg');
   }
   .intro {
     width: 90%;
