--- a/warmup_ave/webmanager/templates/web/base.html
+++ b/warmup_ave/webmanager/templates/web/base.html
@@ -41,20 +41,21 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a class="links" href="/episodes">Episodes</a></li>
               <li><a class="links" href="/blog">Blog</a></li>
-              <!-- <li><a class="links" href="/multimedia">Multimedia</a></li> -->
+              <li><a class="links" href="/blog"><button class="btn btn-avenue" style="color:orange">The Avenue</button></a></li>
+              <li><a class="links" href="/multimedia">Multimedia</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     {% block body %}
     {% endblock %}
-    <footer class="footer">
+    <footer class="footer" style="height:300px">
       <div class="row">
         <div class="col-md-9">
           <h3>Follow us</h3>
           <div class="social-media">
-            <a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.youtube.com/channel/UCnuovu8QN8eYss8pB18LnZw/featured"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/TheWarmUp_Pod"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             <a href="https://soundcloud.com/thewarmuppod"><i class="fa fa-soundcloud" aria-hidden="true"></i></a>
           </div>
         </div>
