--- a/warmup_ave/webmanager/templates/web/blog.html
+++ b/warmup_ave/webmanager/templates/web/blog.html
@@ -15,31 +15,38 @@
   <div class="container">
     <div class="blog-wrapper">
       <h1 style="text-align:center;">Blog</h1>
-      <div class="row">
-        {% for blog in articles %}
-          <div class="col-md-4 col-sm-6">
-            <div class="thumbnail">
-              {% if blog.image %}
-                <img src="{{ blog.image.url }}" alt="" />
-              {% else %}
-                <img src="{% static 'web/img/header.jpg' %}" alt="" />
-              {% endif %}
+      {% if articles %}
+        <div class="row">
+          {% for blog in articles %}
+            <div class="col-md-4 col-sm-6">
+              <div class="thumbnail">
+                {% if blog.image %}
+                  <img src="{{ blog.image.url }}" alt="" />
+                {% else %}
+                  <img src="{% static 'web/img/header.jpg' %}" alt="" />
+                {% endif %}
+              </div>
+              <div class="caption">
+                <a href="{% url 'webmanager:detail' blog.slug %}"><h2>{{blog.title|title}}</h2></a>
+                <h4>Author: {{blog.author|title}}</h4>
+                {% if blog.tags %}
+                  <ul style="list-style:none; display:flex; justify-content:space-around; width:25%;">
+                    {% for tag in blog.tags %}
+                      <a href="{% url 'webmanager:search' tag %}"><li class="category-tags">{{tag|lower}}</li></a>
+                    {% endfor %}
+                  </ul>
+                {% endif %}
+                <p>Posted on {{blog.created_at}}</p>
+              </div>
             </div>
-            <div class="caption">
-              <a href="{% url 'webmanager:detail' blog.slug %}"><h2>{{blog.title|title}}</h2></a>
-              <h4>Author: {{blog.author|title}}</h4>
-              {% if blog.tags %}
-                <ul style="list-style:none; display:flex; justify-content:space-around; width:25%;">
-                  {% for tag in blog.tags %}
-                    <a href="{% url 'webmanager:search' tag %}"><li class="category-tags">{{tag|lower}}</li></a>
-                  {% endfor %}
-                </ul>
-              {% endif %}
-              <p>Posted on {{blog.created_at}}</p>
-            </div>
-          </div>
-        {% endfor %}
-      </div>
+          {% endfor %}
+        </div>
+      {% else %}
+        <br>
+        No articles at this moment...
+        <br>
+        <br>
+      {% endif %}
         <!-- <div class="row">
           <div class="article">
             <img src="/images/{{imgFileName}}" class="img-responsive" width="200px" alt="">
