--- a/warmup_ave/webmanager/templates/web/detail.html
+++ b/warmup_ave/webmanager/templates/web/detail.html
@@ -18,12 +18,15 @@
         {% endfor %}
       </ul>
       <span>Posted on {{article.created_at}}</span><br>
-      <p class="post-content">{{article.content}}</p>
+      <p class="post-content" style="font-family: Helvetica Neue,Helvetica,Arial,sans-serif;">{{article.content}}</p>
       <!-- sharing options -->
-      <h3>Share:</h3>
+      <h3 style="text-align:center">Share:</h3>
       <div class="share">
         <span class='st_facebook_large' displayText='Facebook'></span>
         <span class='st_twitter_large' displayText='Tweet'></span>
+        <span class='st_googleplus_large' displayText='Google+'></span>
+        <span class='st_reddit_large' displayText='Reddit'></span>
+        <span class='st_email_large' displayText='Email'></span>
       </div>
     </div>
 
