--- a/warmup_ave/webmanager/templates/web/index.html
+++ b/warmup_ave/webmanager/templates/web/index.html
@@ -45,10 +45,12 @@
               {% else %}
                 <img src="{% static 'web/img/header.jpg' %}" height="455px" alt="" />
               {% endif %}
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Newest Blog Post: {{article.title|title}}</h5>
-                <p>By {{article.author|title}}</p>
-              </div>
+              <a href="{% url 'webmanager:detail' article.slug %}">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Newest Blog Post: {{article.title|title}}</h5>
+                  <p>By {{article.author|title}}</p>
+                </div>
+              </a>
             </div>
           {% endif %}
 
