Came up with some tests

--- a/warmup_ave/webmanager/templates/web/index.html
+++ b/warmup_ave/webmanager/templates/web/index.html
@@ -2,9 +2,7 @@
 {% load static %}
 
 {% block body %}
-  <section class="jumbotron text-center" style="background: url('{% static 'web/img/header.jpg' %}') no-repeat center center;
-  height: 500px;
-  margin-top: -1.5em;">
+  <section class="jumbotron text-center" style="margin-top: -1.5em;">
     <div class="container">
 
     </div>
