--- a/warmup_ave/webmanager/templates/web/multimedia.html
+++ b/warmup_ave/webmanager/templates/web/multimedia.html
@@ -19,7 +19,7 @@
           {% if y_videos %}
             {% for v in y_videos %}
               <div class="col-md-6">
-                <iframe src="{{ v.youtube_url }}" width="560" height="315"></iframe>
+                <iframe src="{{ v.youtube_url }}" width="560" height="315" class="img-responsive"></iframe>
               </div>
             {% endfor %}
           {% endif %}
